--- a/HTML/HTMLDocs/DataAccess/DAL.html
+++ b/HTML/HTMLDocs/DataAccess/DAL.html
@@ -11,7 +11,14 @@
 </head>
 <body>
   <div class="page">
-    <h2 class="headingMargin">The Data Access Layer</h2>
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
+    <h2 class="headingMargins">The Data Access Layer</h2>
     <!-- ******************************* -->
     <div class="columns">
       <p class="book">
@@ -34,7 +41,7 @@
         examples will follow this structure. The sample code will also attempt to
         use the common LJC structure, formatting and naming conventions.
       </p>
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Create a new Solution named "DataTest".
         </li>
@@ -71,7 +78,7 @@ CREATE TABLE[dbo].[Person]
 )
 END
 GO</pre>
-    <h3 class="headingMargin">The Data Object</h3>
+    <h3 class="headingMargins">The Data Object</h3>
     <!-- ******************************* -->
     <div class="columns">
       <p class="book">
@@ -91,7 +98,7 @@ GO</pre>
         this context is a basic concept and does not refer to the C# (record)
         built-in reference type.
       </p>
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add a Class named "Person" to the Data folder.
         </li>
@@ -157,7 +164,7 @@ GO</pre>
     <span class='xmlComment'>#endregion</span>
   }
 }</pre>
-    <h2 class="headingMargin">The Data Object Collection</h2>
+    <h2 class="headingMargins">The Data Object Collection</h2>
     <!-- ******************************* -->
     <div class="columns">
       <p class="book">
@@ -170,7 +177,7 @@ GO</pre>
         that it represents. It may contain methods for sorting, searching and
         adding new data records.
       </p>
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add a Class named "Persons" to the Data folder.
         </li>
@@ -191,7 +198,7 @@ GO</pre>
   {
   }
 }</pre>
-    <h3 class="headingMargin">The Manager Class</h3>
+    <h3 class="headingMargins">The Manager Class</h3>
     <!-- ******************************* -->
     <div class="columns">
       <p class="book">
@@ -207,7 +214,7 @@ GO</pre>
         A Data Manager usually inherits from or contains a Standard Manager
         class from the Data Service Client Library.
       </p>
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add a Class named "PersonManager" to the Manager folder.
         </li>
@@ -257,6 +264,17 @@ GO</pre>
   }
 }</pre>
     <a href="DALTest.html">The DAL Test Program</a>
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J. Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
   </div>
 </body>
 </html>
