--- a/HTML/HTMLDocs/DataAccess/DALTestAddSave.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestAddSave.html
@@ -13,20 +13,20 @@
   <div class="page">
     <a href="DALTestLoad.html">The DAL Test Add() Method</a>
     <br />
-    <h3 class="headingMargin">The Add() Method</h3>
+    <h3 class="headingMargins">The Add() Method</h3>
     <!-- ******************************* -->
     <div class="columns">
       <p class="book">
         The inherited PersonManager.Add() method adds a new record to the
         configured table.
       </p>
-      <h4 class="headingMargin">Database Assigned Values</h4>
+      <h4 class="headingMargins">Database Assigned Values</h4>
       <p class="book">
         The Add() method has some unique functionality to handle database assigned
         values. These are values that are assigned by the database when a column
         is defined as AutoIncrement or by a database trigger.
       </p>
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the &quot;GetKey Methods&quot; region to the PersonManager class.
         </li>
@@ -52,7 +52,7 @@ public void SetExcludeKeys()
 #endregion</pre>
     <!-- ******************************* -->
     <div class="columnsAuto">
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the TestAdd() function to the Program class, &quot;TestFunctions&quot; region.
         </li>
@@ -93,13 +93,13 @@ private static void TestAdd(PersonManager personManager)
 }</pre>
     <!-- ******************************* -->
     <div class="columns">
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the TestAdd(personManager) function call to the Program class, &quot;Test function calls.&quot; section.
         </li>
       </ul>
     </div>
-    <h4 class="headingMargin">The Key Record Object</h4>
+    <h4 class="headingMargins">The Key Record Object</h4>
     <!-- ******************************* -->
     <div class="columns">
       <p class="book">
