--- a/HTML/HTMLDocs/DataAccess/DALTestDelete.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestDelete.html
@@ -11,16 +11,23 @@
 </head>
 <body>
   <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
     <a href="DALTestUpdate.html">The DAL Test Update() Method</a>
     <br />
-    <h4 class="headingMargin">The Delete() Method</h4>
+    <h4 class="headingMargins">The Delete() Method</h4>
     <!-- ******************************* -->
     <div class="columnsAuto">
       <p class="book">
         The inherited PersonManager.Delete() method deletes the records that
         matches the key specified by the keyRecord parameter.
       </p>
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the TestDelete() function to the Program class, "TestFunctions"
           region.
@@ -46,7 +53,7 @@
 }</pre>
     <!-- ******************************* -->
     <div class="columnsAuto">
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the TestDelete(personManager) function call to the Program class,
           "Test function calls." section.
@@ -66,6 +73,17 @@
   Console.WriteLine("Press any key to <span class='keyWord'>continue</span> . . .");
   Console.ReadKey();
 }</pre>
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J. Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
   </div>
 </body>
 </html>
