--- a/HTML/HTMLDocs/DataAccess/DALTestLoad.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestLoad.html
@@ -11,9 +11,16 @@
 </head>
 <body>
   <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
     <a href="DALTest.html">The DAL Test Program</a>
     <br/>
-    <h3 class="headingMargin">The Load() Method</h3>
+    <h3 class="headingMargins">The Load() Method</h3>
     <!-- ******************************* -->
     <div class="columns">
       <p class="book">
@@ -21,7 +28,7 @@
         from the configured table. If there are no specified parameters, it
         retrieves all available records.
       </p>
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the &quot;Test Functions&quot; region to the Program class after the Main()
           function.
@@ -51,7 +58,7 @@
 }
 <span class='xmlComment'>#endregion</span></pre>
     <div class="columnsAuto">
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the test function call section to the Program class, Main()
           function. This code must be added after the call to
@@ -69,6 +76,17 @@
   Console.ReadKey();
 }</pre>
     <a href="DALTestAdd.html">The DAL Test Add() Method"</a>
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J. Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
   </div>
 </body>
 </html>
