--- a/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
@@ -11,16 +11,23 @@
 </head>
 <body>
   <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
     <a href="DALTestAdd.html">The DAL Test Add() Method</a>
     <br />
-    <h4 class="headingMargin">The Retrieve() Method</h4>
+    <h4 class="headingMargins">The Retrieve() Method</h4>
     <!-- ******************************* -->
     <div class="columnsAuto">
       <p class="book">
         The inherited PersonManager.Retrieve() method retrieves a single record
         that matches the key specified by the keyRecord parameter.
       </p>
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the TestRetrieve() function to the Program class, test function
           &quot;TestFunctions&quot; region.
@@ -47,7 +54,7 @@
 }</pre>
     <!-- ******************************* -->
     <div class="columnsAuto">
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the TestRetrieve(personManager) function call to the Program class,
           &quot;Test function calls.&quot; section.
@@ -56,6 +63,17 @@
     </div>
     <br />
     <a href="DALTestUpdate.html"">The DAL Test Update() Method</a>
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J. Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
  </div>
 </body>
 </html>
