--- a/HTML/HTMLDocs/DataAccess/DALTestUpdate.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestUpdate.html
@@ -11,16 +11,23 @@
 </head>
 <body>
   <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
     <a href="DALTestRetrieve.html">The DAL Test Retrieve() Method</a>
     <br />
-    <h4 class="headingMargin">The Update() Method</h4>
+    <h4 class="headingMargins">The Update() Method</h4>
     <!-- ******************************* -->
     <div class="columnsAuto">
       <p class="book">
         The inherited PersonManager.Update() method updates the specified
         dataRecord that matches the key specified by the keyRecord parameter.
       </p>
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the TestUpdate() function to the Program class, &quot;TestFunctions&quot;
           region.
@@ -62,7 +69,7 @@
 }</pre>
     <!-- ******************************* -->
     <div class="columnsAuto">
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add the TestUpdate(personManager) function call to the Program class,
           &quot;Test function calls.&quot; section.
@@ -71,6 +78,16 @@
     </div>
     <a href="DALTestDelete.html">The DAL Test Delete() Method</a>
     <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DAL
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J. Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
   </div>
 </body>
 </html>
