--- a/HTML/HTMLDocs/DataAccess/DataAccessSave.html
+++ b/HTML/HTMLDocs/DataAccess/DataAccessSave.html
@@ -19,7 +19,7 @@
         library and DataAccess class to retrieve data from a database.
       </p>
     </div>
-    <h2 class="headingMargin">The Data Access Library</h2>
+    <h2 class="headingMargins">The Data Access Library</h2>
     <!-- ****************************** -->
     <div class="columnsAuto">
       <p class="book">
@@ -27,7 +27,7 @@
         common functionality for program access to database tables.
       </p>
     </div>
-    <h3 class="headingMargin">DataAccess Class</h3>
+    <h3 class="headingMargins">DataAccess Class</h3>
     <!-- ****************************** -->
     <div class="columns">
       <p class="book">
@@ -70,7 +70,7 @@ values
 GO</pre>
     <!-- ****************************** -->
     <div class="columns">
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Create a new Solution named "DataAccessTest" and a .NET Framework WinForms project named "PersonApp".
         </li>
@@ -90,8 +90,8 @@ GO</pre>
           Add a reference to the External\LJCDataAccess.dll file for the PersonDAL project and set the reference "Copy Local" property to "False".
         </li>
       </ul>
-      <h4 class="headingMargin">Creating the Custom DataManager Class</h4>
-      <ul class="listMargin">
+      <h4 class="headingMargins">Creating the Custom DataManager Class</h4>
+      <ul class="listMargins">
         <li>
           Create a Folder named "Manager" in the PersonDAL project.
         </li>
@@ -100,7 +100,7 @@ GO</pre>
         </li>
       </ul>
     </div>
-    <h3 class="headingMargin">GetDataTable() Method</h3>
+    <h3 class="headingMargins">GetDataTable() Method</h3>
     <!-- ****************************** -->
     <div class="columnsAuto">
       <p class="book">
