--- a/HTML/HTMLDocs/DataAccess/DataGridView.html
+++ b/HTML/HTMLDocs/DataAccess/DataGridView.html
@@ -12,6 +12,12 @@
 <body>
   <div class="page">
     <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DataGridView
+    </div>
+    <br />
     <!-- ****************************** -->
     <div class="columnsAuto">
       <p class="book">
@@ -19,10 +25,10 @@
       </p>
     </div>
     <br />
-    <h2 class="headingMargin">Adding Data to a DataGridView</h2>
+    <h2 class="headingMargins">Adding Data to a DataGridView</h2>
     <!-- ****************************** -->
     <div class="columnsAuto">
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Add a new WinForms Project named "PersonApp" to the DataAccessTest solution.
         </li>
@@ -154,6 +160,17 @@
     #endregion
   }
 }</pre>
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DataGridView
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J. Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
   </div>
 </body>
 </html>
