--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -10,6 +10,7 @@
   <meta name="keywords" content="LJC, C#, Code, Documentation">
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width initial-scale=1' />
+  <link rel='stylesheet' type='text/css' href='../CSS/HTMLBooks.css' />
   <link rel='stylesheet' type='text/css' href='../CSS/CodeDoc.css' />
 </head>
 <body>
@@ -110,8 +111,25 @@
         <a href="HTMLDocs/DataAccess/DataAccess.html">Data Access</a>
       </p>
       <p>
-        <a href="HTMLDocs/DataAccess/DAL.html">Data Access Layer</a>
+        <a href="HTMLDocs/DataAccess/DALTest.html">DAL Test Proram</a>
       </p>
+      <ul class="listMarginsNoDot">
+        <li>
+          <a href="HTMLDocs/DataAccess/DALTestLoad.html">Test Load Method</a>
+        </li>
+        <li>
+          <a href="HTMLDocs/DataAccess/DALTestAdd.html">Test Add Method</a>
+        </li>
+        <li>
+          <a href="HTMLDocs/DataAccess/DALTestRetrieve.html">Test Retrieve Method</a>
+        </li>
+        <li>
+          <a href="HTMLDocs/DataAccess/DALTestUpdate.html">Test Update Method</a>
+        </li>
+        <li>
+          <a href="HTMLDocs/DataAccess/DALTestDelete.html">Test Delete Method</a>
+        </li>
+      </ul>
       <p>
         <a href="HTMLDocs/DataAccess/DataGridView.html">Show Data in DataGridView</a>
       </p>
