--- a/HTML/HTMLDocs/DataAccess/DataAccess.html
+++ b/HTML/HTMLDocs/DataAccess/DataAccess.html
@@ -12,6 +12,12 @@
 <body>
   <div class="page">
     <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DataAccess
+    </div>
+    <br />
     <!-- ****************************** -->
     <div class="columnsAuto">
       <p class="book">
@@ -19,7 +25,7 @@
         library and DataAccess class to retrieve data from a database.
       </p>
     </div>
-    <h2 class="headingMargin">The Data Access Library</h2>
+    <h2 class="headingMargins">The Data Access Library</h2>
     <!-- ****************************** -->
     <div class="columnsAuto">
       <p class="book">
@@ -27,7 +33,7 @@
         common functionality for program access to database tables.
       </p>
     </div>
-    <h3 class="headingMargin">DataAccess Class</h3>
+    <h3 class="headingMargins">DataAccess Class</h3>
     <!-- ****************************** -->
     <div class="columns">
       <p class="book">
@@ -70,7 +76,7 @@ values
 GO</pre>
     <!-- ****************************** -->
     <div class="columns">
-      <ul class="listMargin">
+      <ul class="listMargins">
         <li>
           Create a new Solution named "DataAccessTest" and a .NET Framework WinForms project named "PersonApp".
         </li>
@@ -90,8 +96,8 @@ GO</pre>
           Add a reference to the External\LJCDataAccess.dll file for the PersonDAL project and set the reference "Copy Local" property to "False".
         </li>
       </ul>
-      <h4 class="headingMargin">Creating the Custom DataManager Class</h4>
-      <ul class="listMargin">
+      <h4 class="headingMargins">Creating the Custom DataManager Class</h4>
+      <ul class="listMargins">
         <li>
           Create a Folder named "Manager" in the PersonDAL project.
         </li>
@@ -100,7 +106,7 @@ GO</pre>
         </li>
       </ul>
     </div>
-    <h3 class="headingMargin">GetDataTable() Method</h3>
+    <h3 class="headingMargins">GetDataTable() Method</h3>
     <!-- ****************************** -->
     <div class="columnsAuto">
       <p class="book">
@@ -121,7 +127,7 @@ GO</pre>
 
     <span class='xmlComment'>/// &lt;summary&gt;</span><span class="comment">Initializes an object instance.</span><span class="xmlComment">&lt;/summary&gt;</span>
     <span class='xmlComment'>/// &lt;param name="</span>tableName<span class="xmlComment">"&gt;<span class="comment">The Table name.</span>&lt;/param&gt;</span>
-    <span class='modifier'>public</span> PersonManager(string tableName = "Person")
+    <span class='modifier'>public</span> PersonManager(<span class="commonType">string</span> tableName = "Person")
     {
       TableName = tableName;
       <span class='commonType'>var</span> dataSource = <span class='text'>"DBServiceName"</span>;
@@ -178,5 +184,16 @@ GO</pre>
     <span class='xmlComment'>#endregion</span>
   }
 }</pre>
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html#Testing">HowTo</a>
+      / DataAccess
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J. Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
+  </div>
 </body>
 </html>
