--- a/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
@@ -29,6 +29,66 @@
       </p>
       <ul class="listMargins">
         <li>
+          Add the &quot;GetKey Methods&quot; region to the PersonManager class.
+        </li>
+        <li>
+          Add the SetExcludeKeys() method to the PersonManager class, &quot;GetKey
+          Methods&quot; region.
+        </li>
+      </ul>
+    </div>
+    <pre>
+<span class='xmlComment'>#region GetKey Methods</span>
+
+<span class='comment'>// Sets the temporary exclude keys.</span>
+<span class='xmlComment'>///</span>
+<span class='modifier'>public</span> <span class='commonType'>void</span> SetExcludeKeys()
+{
+  <span class='commonType'>string</span>[] excludeNames = <span class='keyWord'>new</span> <span class='commonType'>string</span>[]
+  {
+    Person.ColumnPrincipleFlag
+  };
+  SetExcludeKeyValues(excludeNames);
+}
+<span class='xmlComment'>#endregion</span></pre>
+    <h4 class="headingMargins">The Key Record Object</h4>
+    <!-- ******************************* -->
+    <div class="columns">
+      <p class="book">
+        The key record data object is used to modify a data method to restrict it
+        to those records that match the key record initialized properties.
+      </p>
+      <p class="book">
+        There are some properties that are automatically initialized in a data
+        object. These are properties such as numeric and DateTime. Numeric
+        properties are automatically initialized to zero.
+      </p>
+      <p class="book">
+        If we create a Person key record and set the Name property, the
+        PrincipleFlag property is automatically initialized to zero. This causes
+        the personManager.Retrieve(keyRecord) method to internally create the
+        following SQL statement.
+      </p>
+    </div>
+    <pre class="code">
+select ID, Name, PrincipleFlag
+from Person
+where Name = &apos;Added&apos; and PrincipleFlag = &apos;0&apos;.</pre>
+    <div class="columns">
+      <p class="book">
+        To prevent the PrincipleFlag value from being included in the SQL
+        statement, we first call the SetExcludeKeys() method.
+      </p>
+      <p class="book">
+        The SetExcludeKeys() manager method is used to temporarily exclude
+        specific fields from the SQL statement created from the KeyRecord object.
+        The manager exclude keys are cleared after a call to any data access
+        method.
+      </p>
+    </div>
+    <div class="columnsAuto">
+      <ul class="listMargins">
+        <li>
           Add the TestRetrieve() function to the Program class, test function
           &quot;TestFunctions&quot; region.
         </li>
