Common Javascript Updates

--- a/JavascriptCommon/TestBinarySearch.html
+++ b/JavascriptCommon/TestBinarySearch.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<!-- Copyrignt (c) Lester J. Clark and Contributors -->
+<!-- Licensed under the MIT license. -->
+<!-- TestBinarySearch.html -->
+<html lang="en" xmlns="http://www.w3.org/1999/xhtl">
 <head>
   <title>Test BinarySearch()</title>
+  <meta charset="utf-8" />
   <meta name="description" content="Custom Javascript BinarySearch{} Method" />
   <meta name="keywords" content="Javascript, BinarySearch()" />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width initial-scale=1" />
-
-  <script src="Common.js" type="text/javascript"></script>
+  <script src="LJCCommon.js" type="text/javascript"></script>
   <script src="ItemTemplate.js" type="text/javascript"></script>
   <script src="ItemsTemplate.js" type="text/javascript"></script>
   <script>
