--- a/JavascriptCommon/LogOnTable.html
+++ b/JavascriptCommon/LogOnTable.html
@@ -14,10 +14,12 @@
   <script src="Logon.js" type="text/javascript"></script>
 </head>
 <body>
-  <div class="pageCenter">
+  <div class="page"
+       style="text-align: center">
     <h2>Login</h2>
     <form name="LogOnForm" action="LogOnAction.html" method="get"
-          class="formCenter">
+          class="form"
+          style="margin: auto; width: 237px">
       <div class="table">
         <div class="row">
           <div class="cellLeft">
@@ -32,10 +34,10 @@
         </div>
         <div class="row">
           <div class="cellLeft">
-            <label for="Password">Password</label>
+            <label for="AccessCode">AccessCode</label>
           </div>
           <div class="cell">
-            <input type="password" id="Password" required
+            <input type="password" id="AccessCode" required
                    maxlength="12" size="12 * 6" ; />
           </div>
         </div>
@@ -48,6 +50,7 @@
         </div>
       </div>
     </form>
+    <div id="message"></div>
     <br />
   </div>
   <script>
