--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -7,12 +7,9 @@
   <title>Test Text Generation</title>
   <link rel="stylesheet" type="text/css" href="../Common.css" />
   <script src="../Common.js"></script>
-  <script src="RepeatItem.js"></script>
-  <script src="RepeatItems.js"></script>
-  <script src="Replacement.js"></script>
-  <script src="Replacements.js"></script>
-  <script src="Section.js"></script>
-  <script src="Sections.js"></script>
+  <script src="../GenLib/Sections.js"></script>
+  <script src="../GenLib/RepeatItems.js"></script>
+  <script src="../GenLib/Replacements.js"></script>
 </head>
 <body>
   <form>
