--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -13,41 +13,67 @@
 </head>
 <body>
   <form>
-    <label for="text">Text</label><br />
-    <textarea id="text" name="text" rows="1" cols="80"
+    <label for="text">Template</label><br />
+    <textarea id="template" name="template" rows="1" cols="80"
+              autofocus spellcheck="false"
+              class="text"></textarea><br />
+    <br />
+    <label for="output">Output</label><br />
+    <textarea id="output" name="output" rows="1" cols="80"
               autofocus spellcheck="false"
               class="text"></textarea>
   </form>
   <button id="ok" type="button">OK</button>
 
   <script>
-    // Create Data
-    let sections = new Sections();
-    let section = sections.Add("Main");
-
-    let repeatItems = section.RepeatItems;
-    let repeatItem = repeatItems.Add("First");
-
-    let replacements = repeatItem.Replacements;
-    replacements.Add("_CollectionName_", "GenItems")
-    replacements.Add("_ClassName_", "GenItem")
-    let replacement = replacements.Items(0);
-    alert(replacement.Value);
-
     // Events
-    text.addEventListener("keyup", Common.SetTextRows);
-    ok.addEventListener("click", ProcessTemplate);
+    template.addEventListener("keyup", Common.EventTextRows);
+    //output.addEventListener("input", Common.EventTextRows);
+    ok.addEventListener("click", Process);
 
-    function ProcessTemplate()
+    function Process()
     {
-      let lines = text.value.split("\n");
+      let templateText = template.value;
+      let sections = GetSections();
+      let outputText = GenText(templateText, sections);
+      output.value = outputText;
+      Common.SetTextRows(output);
+    }
+
+    function GenText(template, sections)
+    {
+      let retValue = "";
+      let lines = template.split("\n");
       if (Array.isArray(lines))
       {
         for (index = 0; index < lines.length; index++)
         {
-          alert(lines[index]);
+          let line = lines[index];
+          if (line.includes("#SectionBegin"))
+          {
+            let tokens = line.split(" ");
+            let sectionName = tokens[2];
+            let section = sections.Retrieve(sectionName);
+          }
+          retValue += `${line}\n`;
         }
       }
+      return retValue;
+    }
+
+    function GetSections()
+    {
+      // Create Data
+      let retValue = new Sections();
+      let section = retValue.Add("Main");
+
+      let repeatItems = section.RepeatItems;
+      let repeatItem = repeatItems.Add("First");
+
+      let replacements = repeatItem.Replacements;
+      replacements.Add("_CollectionName_", "GenItems")
+      replacements.Add("_ClassName_", "GenItem")
+      return retValue;
     }
   </script>
 </body>
